--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-loader": "4.0.3",
     "source-map-loader": "1.1.1",
     "style-loader": "2.0.0",
+    "swiper": "6.3.5",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
